<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_store"
            android:icon="@drawable/ic_store"
            android:title="@string/nav_tienda" />
        <item
            android:id="@+id/navigation_productos"
            android:icon="@drawable/ic_t_shirt"
            android:title="@string/nav_productos" />
        <item
            android:id="@+id/navigation_map"
            android:icon="@drawable/ic_map"
            android:title="@string/nav_mapa" />
        <item
            android:id="@+id/navigation_explorar"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_explorar" />

    </group>

    <item android:title="Usuario">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_perfil"
                android:title="Perfil" />
            <item
                android:id="@+id/nav_logut"
                android:icon="@drawable/ic_return"
                android:title="Cerrar Sesión" />
        </menu>
    </item>

</menu>
