<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="tecsup.integrador.loginandroid.activity.TiendaRegisterActivity"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/bg_register"
android:gravity="center"
android:orientation="vertical"
android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/tienda_nombre"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/txtPuesto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/tienda_puesto"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/tienda_telefono"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/input_login_hint" />

        <MultiAutoCompleteTextView
            android:id="@+id/multiAutoCompleteTextView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="Ingrese las categorias aquí"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/input_login_hint">

            <requestFocus />
        </MultiAutoCompleteTextView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnQuitarCategorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:background="@color/colorAccent"
                android:layout_margin="10dp"
                android:text="Quitar"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <Button
                android:id="@+id/btnAgregarCategorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@color/colorAccent"
                android:layout_margin="10dp"
                android:text="Agregar"
                android:textColor="@color/white"
                android:textSize="10dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnMapa"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="Ubicar tienda en el mapa"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:onClick="registerUser"
            android:text="Guardar"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnBack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="Atras"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>